# mapps

./: .gitignore  CMakeLists.txt  README.md  library.json  platformio.ini
cli/: CmdBuild.cpp  CmdBuild.h  CmdCreate.cpp  CmdCreate.h  CmdInstall.cpp  CmdInstall.h  CmdKeygen.cpp  CmdKeygen.h  CmdList.cpp  CmdList.h  CmdSign.cpp  CmdSign.h  CmdUninstall.cpp  CmdUninstall.h  CmdUnpack.cpp  CmdUnpack.h  CmdVerify.cpp  CmdVerify.h  MeshtasticSerial.cpp  MeshtasticSerial.h  NativeRng.cpp  NativeRng.h  PosixIO.cpp  PosixIO.h  SerialPort.cpp  SerialPort.h  main.cpp
compat/: Arduino.h
include/mapps/: AppLibrary.h  AppRuntime.h  AppStateBackend.h  BerryRuntime.h  FileBackend.h  MappApp.h  MappAppLibrary.h  MappFormat.h  MappManifest.h  MappSignature.h  MappTrustStore.h  MeshEventHandler.h  TrustBackend.h
src/: AppLibrary.cpp  AppStateBinding.cpp  AppStateBinding.h  BerryRuntime.cpp  JsonBinding.cpp  JsonBinding.h  MappAppLibrary.cpp  MappFormat.cpp  MappJson.cpp  MappJson.h  MappManifest.cpp  MappSignature.cpp  MappTrustStore.cpp  MeshEventHandler.cpp  be_modtab.c  be_port.c  berry_conf.h
test/test_app_lifecycle/: test_app_lifecycle.cpp
test/test_app_state/: PosixAppStateBackend.cpp  PosixAppStateBackend.h  test_app_state.cpp
test/test_berry_runtime/: test_berry_runtime.cpp
